syntax = "proto3";

package messaging;
option go_package = "/proto"; 


service MessagingService {
    rpc SendMessage (SendMessageRequest) returns (SendMessageResponse);
    rpc GetMessages (GetMessagesRequest) returns (GetMessagesResponse);
}

message SendMessageRequest {
    string sender_id = 1;
    string receiver_id = 2;
    string content = 3;
}

message SendMessageResponse {
    bool success = 1;
    string message = 2;
}

message GetMessagesRequest {
    string sender_id = 1;
    string receiver_id = 2;
}

message GetMessagesResponse {
    repeated Message messages = 1;
}

message Message {
    string sender_id = 1;
    string receiver_id = 2;
    string content = 3;
    string timestamp = 4;
}