syntax = "proto3";

package chat;

service ChatService {
  rpc SendMessage (MessageRequest) returns (MessageResponse);
  rpc ReceiveMessages (MessageStreamRequest) returns (stream Message);
}

message MessageRequest {
  string sender_id = 1;
  string receiver_id = 2;
  string content = 3;
}

message MessageResponse {
  string status = 1;
}

message Message {
  string id = 1;
  string sender_id = 2;
  string receiver_id = 3;
  string content = 4;
  string timestamp = 5;
}

message MessageStreamRequest {
  string user_id = 1;
}